# chw-server

./: .gitignore  chw.db  chw1.db  chw2.db  chw3.db  data444.xlsx  encode.py  pyproject.toml  utils.py
api/: main.py
data/: clean_data.xlsx  cleaned_data.xlsx  cleaned_dataset.xlsx  data.xlsx
server/: database.py  main.py  models.py  script.ipynb  utils.py
