[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["bushaija <Bushaijarobert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
sqlmodel = "^0.0.22"
pydantic = "^2.9.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
